--- a/app/src/main/res/layout/fragment_demo_item.xml
+++ b/app/src/main/res/layout/fragment_demo_item.xml
@@ -2,18 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center|bottom"
+    android:gravity="center"
     android:background="@color/transparent"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
     android:orientation="vertical">
 
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/lorem"
         android:textColor="@color/white"
@@ -23,7 +22,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/lorem"
         android:layout_marginTop="10dp"
