--- a/app/src/main/res/layout/fragment_event_confirmation.xml
+++ b/app/src/main/res/layout/fragment_event_confirmation.xml
@@ -32,11 +32,12 @@
             android:src="@drawable/mexico" />
 
         <TextView
+            android:id="@+id/txt_event_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="32dp"
-            android:text="Construcción parke skate"
+            android:text="Nombre del evento"
             android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold" />
