--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,20 +16,28 @@
         tools:context="la.opi.verificacionciudadana.activities.TutorialActivity"
         tools:ignore="MergeRootFrame" />
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="25dp"-->
+        <!--android:background="@android:color/transparent"-->
+        <!--android:minHeight="?attr/actionBarSize"-->
+        <!--app:theme="@style/Erik.Toolbar.Transparent" />-->
+
+    <Button
+        android:id="@+id/btn_omited"
+        style="@style/Widget.Button.Standar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:background="@android:color/transparent"
-        android:minHeight="?attr/actionBarSize"
-        app:theme="@style/Erik.Toolbar.Transparent" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:padding="7dp"
+        android:textSize="16sp"
+        android:text="Omitir" />
 
-    <View
-        android:id="@+id/statusBarBackground"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-</FrameLayout>
+
+</RelativeLayout>
 
 
