--- a/app/src/main/res/layout/fragment_info_window.xml
+++ b/app/src/main/res/layout/fragment_info_window.xml
@@ -28,4 +28,14 @@
             android:textColor="@color/secondary_text"
             android:textSize="16sp" />
 
+    <TextView
+        android:id="@+id/txt_more"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="@string/more"
+        android:textColor="@color/primary"
+        android:textSize="14sp"
+        android:layout_gravity="right" />
+
 </LinearLayout>
